--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -10,7 +10,8 @@ spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:file:target/testdb/db2;shutdown=true
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 spring.datasource.name=phase23
-spring.datasource.password=helianto
+spring.datasource.username=sa
+spring.datasource.password=
 
 iservport.s3.url=https://s3-sa-east-1.amazonaws.com
 iservport.s3.accessKey=
