--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ description = """Aplicação web - Cidadão Consciente"""
 
 buildscript {
     ext {
-        springBootVersion = '1.3.2.RELEASE'
+        springBootVersion = '1.3.5.RELEASE'
     }
     repositories {
         mavenLocal()
@@ -52,6 +52,8 @@ dependencies {
     compile group: 'org.scala-lang',             name: 'scala-library',      version: '2.11.7'
     compile group: 'org.springframework.boot',   name: 'spring-boot-starter-web'
     compile group: 'org.springframework.boot',   name: 'spring-boot-starter-actuator'
+    compile("org.springframework.boot:spring-boot-devtools")
+    compile("com.h2database:h2")
     compile group: 'org.springframework.social', name: 'spring-social-web', version: '1.1.4.RELEASE'
     compile group: 'org.springframework.social', name: 'spring-social-facebook-web', version: '2.0.3.RELEASE'
     compile group: 'org.helianto', name: 'helianto-core',      version: heliantoVersion
