--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,8 +8,11 @@ server.ssl.key-password=helianto
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:hsql//localhost;shutdown=true
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+spring.jpa.properties.hibernate.default_schema=PUBLIC
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=sa
 spring.datasource.password=
+spring.h2.console.enabled = true
 
 iservport.s3.url=https://s3-sa-east-1.amazonaws.com
 iservport.s3.accessKey=
