--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ springBoot {
 bootRun {
     systemProperties System.properties
 }
+
+task stage {
+    dependsOn build
+}
+
 //test.onlyIf { ! Boolean.getBoolean('skip.tests') }
 test.onlyIf { false }
 
