--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,9 +1,9 @@
 helianto.api.url=https://service.iservport.com/
 
-server.port=8443
-server.ssl.key-store=classpath:keystore.jks
-server.ssl.key-store-password=helianto
-server.ssl.key-password=helianto
+#server.port=8443
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=helianto
+#server.ssl.key-password=helianto
 
 logging.file=iservport-control.log
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
