--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 helianto.api.url=http://localhost:8080/
 
-server.port=8443
-server.ssl.key-store=classpath:keystore.jks
-server.ssl.key-store-password=helianto
-server.ssl.key-password=helianto
+#server.port=8443
+#server.ssl.key-store=classpath:keystore.jks
+#server.ssl.key-store-password=helianto
+#server.ssl.key-password=helianto
 
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.url=jdbc:hsqldb:hsql//localhost;shutdown=true
