--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,8 @@ dependencies {
     compile group: 'org.webjars', name: 'json3', version: '3.3.2-1'
     compile group: 'org.webjars', name: 'nervgh-angular-file-upload', version: '1.1.5-1'
     compile group: 'org.webjars', name: 'angular-loading-bar', version: '0.7.1'
+    compile group: 'org.webjars', name: 'material-design-lite', version: '1.1.3'
+
     compile group: 'org.webjars.bower', name: 'momentjs', version: '2.10.3'
     compile group: 'org.webjars.bower', name: 'slimScroll', version: '1.3.3'
     compile group: 'org.webjars.bower', name: 'countUp.js', version: '1.5.3'
