--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     testCompile group: 'junit',  name: 'junit',    version: '4.10'
     testCompile group: 'org.scalactic',  name: 'scalactic_2.11', version: '2.2.+'
     testCompile group: 'org.scalatest',  name: 'scalatest_2.11', version: '2.2.+'
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1201-jdbc4'
 }
 
 task wrapper(type: Wrapper) {
