--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,14 +5,22 @@ helianto.api.url=http://localhost:8080/
 #server.ssl.key-store-password=helianto
 #server.ssl.key-password=helianto
 
-spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:hsql//localhost;shutdown=true
-spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
-spring.jpa.properties.hibernate.default_schema=PUBLIC
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled = true
+#spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+#spring.datasource.url=jdbc:hsqldb:hsql//localhost;shutdown=true
+#spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
+#spring.jpa.properties.hibernate.default_schema=PUBLIC
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled = true
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
 iservport.s3.url=https://s3-sa-east-1.amazonaws.com
 iservport.s3.accessKey=
